--- a/src/pom.xml
+++ b/src/pom.xml
@@ -56,6 +56,11 @@
             <version>2.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
     </dependencies>
 
     <properties>
