Neues Logging eingebaut

--- a/src/src/main/resources/log4j.properties
+++ b/src/src/main/resources/log4j.properties
@@ -1,16 +1,19 @@
 
 #Variable to change the dynamic parts
 LOGFILE_NAME = ka-user-store
-ROOT_LOGGER_LEVEL = INFO
 SPRING_FRAME_WORK_LOG_LEVEL=INFO
+DEFAULT_LOGGER_LOG_LEVEL = INFO
 
 
 #Constants of output formating
-PATTERN_CONSOLE = [%d{ISO8601}] [%-5p] [%t] From:[%c:] Message:[%m]%n
+PATTERN_CONSOLE = [%d{ISO8601}] [%-5p] [%t] [%m]%n
 PATTERN_FILE = ${PATTERN_CONSOLE}
 
 #Setup the main root logger of the output
-log4j.rootLogger=${ROOT_LOGGER_LEVEL}, consolelogger, dateRotateLogger
+#log4j.rootLogger=dateRotateLogger, consolelogger, dateRotateLoggerDebug
+log4j.rootLogger=${SPRING_FRAME_WORK_LOG_LEVEL}, consolelogger
+log4j.logger.debug= DEBUG, dateRotateLoggerDebug
+log4j.logger.default=${DEFAULT_LOGGER_LOG_LEVEL},dateRotateLogger
 
 ###Spring configuration
 #Setup the loglevel for the springframework
@@ -24,7 +27,16 @@ log4j.appender.consolelogger.layout.ConversionPattern= ${PATTERN_CONSOLE}
 #File Output configuration
 log4j.appender.dateRotateLogger=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.dateRotateLogger.Append=true
+log4j.appender.dateRotateLogger.Threshold=INFO
 log4j.appender.dateRotateLogger.datePattern='-'yyyy-MM-dd'.log'
 log4j.appender.dateRotateLogger.file=c:\\logs\\${LOGFILE_NAME}
 log4j.appender.dateRotateLogger.layout=org.apache.log4j.PatternLayout
 log4j.appender.dateRotateLogger.layout.ConversionPattern=${PATTERN_FILE}
+
+log4j.appender.dateRotateLoggerDebug=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.dateRotateLoggerDebug.Append=true
+log4j.appender.dateRotateLoggerDebug.Threshold=DEBUG
+log4j.appender.dateRotateLoggerDebug.datePattern='-'yyyy-MM-dd'.log'
+log4j.appender.dateRotateLoggerDebug.file=c:\\logs\\debug_${LOGFILE_NAME}
+log4j.appender.dateRotateLoggerDebug.layout=org.apache.log4j.PatternLayout
+log4j.appender.dateRotateLoggerDebug.layout.ConversionPattern=${PATTERN_FILE}
