add new jar lib-shared to the system

--- a/src/src/main/resources/application.properties
+++ b/src/src/main/resources/application.properties
@@ -9,6 +9,7 @@ endpoints.cors.allowed-headers=*
 endpoints.cors.allowed-origins=*
 endpoints.cors.allowed-methods=*
 
+server.port=
 s3f.server.port.range.min=30350
 s3f.server.port.range.max=30355
 
