add new lib to system

--- a/src/src/main/resources/application.properties
+++ b/src/src/main/resources/application.properties
@@ -9,7 +9,7 @@ endpoints.cors.allowed-headers=*
 endpoints.cors.allowed-origins=*
 endpoints.cors.allowed-methods=*
 
-server.port=
+server.port=-1
 s3f.server.port.range.min=30350
 s3f.server.port.range.max=30355
 
@@ -34,3 +34,4 @@ s3f.swagger2.termsOfServcieUrl=
 s3f.swagger2.title=
 s3f.swagger2.version=
 
+s3f.jwt.secret = Mindestens32Zeichenlang123456789
