Lib as mavn dependency

--- a/src/pom.xml
+++ b/src/pom.xml
@@ -79,10 +79,24 @@
 		<dependency>
 			<groupId>sintec.s3f</groupId>
 			<artifactId>shared-lib</artifactId>
-			<version>1.0</version>
+			<version>1.1.27</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>
+				spring-boot-starter-cloud-connectors
+			</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
 	</dependencies>
 
 	<properties>
