--- a/src/src/main/resources/log4j.properties
+++ b/src/src/main/resources/log4j.properties
@@ -28,15 +28,15 @@ log4j.appender.consolelogger.layout.ConversionPattern= ${PATTERN_CONSOLE}
 log4j.appender.dateRotateLogger=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.dateRotateLogger.Append=true
 log4j.appender.dateRotateLogger.Threshold=INFO
-log4j.appender.dateRotateLogger.datePattern='-'yyyy-MM-dd'.log'
-log4j.appender.dateRotateLogger.file=c:\\logs\\${LOGFILE_NAME}
+log4j.appender.dateRotateLogger.datePattern='.'yyyy-MM-dd
+log4j.appender.dateRotateLogger.file=c:\\logs\\${LOGFILE_NAME}.log
 log4j.appender.dateRotateLogger.layout=org.apache.log4j.PatternLayout
 log4j.appender.dateRotateLogger.layout.ConversionPattern=${PATTERN_FILE}
 
 log4j.appender.dateRotateLoggerDebug=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.dateRotateLoggerDebug.Append=true
 log4j.appender.dateRotateLoggerDebug.Threshold=DEBUG
-log4j.appender.dateRotateLoggerDebug.datePattern='-'yyyy-MM-dd'.log'
-log4j.appender.dateRotateLoggerDebug.file=c:\\logs\\debug_${LOGFILE_NAME}
+log4j.appender.dateRotateLoggerDebug.datePattern='.'yyyy-MM-dd
+log4j.appender.dateRotateLoggerDebug.file=c:\\logs\\debug_${LOGFILE_NAME}.log
 log4j.appender.dateRotateLoggerDebug.layout=org.apache.log4j.PatternLayout
 log4j.appender.dateRotateLoggerDebug.layout.ConversionPattern=${PATTERN_FILE}
