--- a/src/src/main/resources/log4j.properties
+++ b/src/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 
 #Variable to change the dynamic parts
-LOGFILE_NAME = sintec.s3f.mi-config
+LOGFILE_NAME = ka-user-store
 SPRING_FRAME_WORK_LOG_LEVEL=INFO
 DEFAULT_LOGGER_LOG_LEVEL = INFO
 
