--- a/src/pom.xml
+++ b/src/pom.xml
@@ -17,6 +17,11 @@
 	</parent>
 	<dependencies>
 		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.21</version>
+		</dependency>
+		<dependency>
 			<groupId>sintec.s3f.component</groupId>
 			<artifactId>base</artifactId>
 			<version>[1.0.0,2.0.0)</version>
@@ -67,15 +72,13 @@
 			<version>[1.0.0,2.0.0)</version>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
+			<groupId>sintec.s3f.component</groupId>
+			<artifactId>rest</artifactId>
+			<version>[1.0.0,2.0.0)</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>4.3.2.RELEASE</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -83,7 +86,8 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!--<dependency><groupId>datev.kassenarchiv</groupId><artifactId>permissionResolver</artifactId><VERSION>1.0</VERSION></dependency>-->
+		<!--<dependency><groupId>datev.kassenarchiv</groupId><artifactId>permissionResolver</artifactId><VERSION>1.0</VERSION></dependency> -->
+		
 	</dependencies>
 	<properties>
 		<start-class>s3f.Application</start-class>
@@ -98,7 +102,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<!-- DISABLE ALL VERSIONS OF THIS PLUGIN -->
-				<!-- <version>2.8.2</version>-->
+				<!-- <version>2.8.2</version> -->
 				<configuration>
 					<skip>true</skip>
 				</configuration>
