--- a/src/pom.xml
+++ b/src/pom.xml
@@ -27,6 +27,11 @@
 			<version>[2.0.0,3.0.0)</version>
 		</dependency>
 		<dependency>
+            <groupId>sintec.s3f.component</groupId>
+            <artifactId>messaging</artifactId>
+            <version>[2.0.0,3.0.0)</version>
+        </dependency>
+		<dependency>
 			<groupId>sintec.s3f.component</groupId>
 			<artifactId>authorization.jwt</artifactId>
 			<version>[2.0.0,3.0.0)</version>
